# arduino-exploring

./: .gitignore  README.md
1_beep_13/: 1_beep_13.ino
2_button/: 2_button.ino
3_flag_button/: 3_flag_button.ino  diagram.json  index.html
4_beep/: 4_beep.ino
5_1602A_i2c/: 5_1602A_i2c.ino
pong/: player.cpp  player.h  pong.ino
pyfirmata_test/: main.py  pyproject.toml
pyserial_test/: arduino.fzz  boids.py  pyproject.toml  pyserial_test.ino  red_ball.py
running_man/: button.h  frames.h  running_man.fzz  running_man.ino  sounds.h
sketch_jan21a/: sketch_jan21a.ino
sketch_jan4a/: sketch_jan4a.ino
sketch_jan9a/: sketch_jan9a.ino
test_SN74HC595N/: test_SN74HC595N.ino
