[tool.poetry]
name = "pyfirmata_test"
version = "0.1.0"
description = ""
authors = ["aagz <aagzip@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyfirmata2 = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

